--- a/CryptologyCourseDesign/CryptologyCourseDesign.vcxproj
+++ b/CryptologyCourseDesign/CryptologyCourseDesign.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="FormatExchange.h" />
     <ClInclude Include="spn.h" />
+    <ClInclude Include="spn_plus.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -156,6 +157,7 @@
     <ClCompile Include="CryptologyCourseDesign.cpp" />
     <ClCompile Include="FormatExchange.cpp" />
     <ClCompile Include="spn.cpp" />
+    <ClCompile Include="spn_plus.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
