--- a/CryptologyCourseDesign/CryptologyCourseDesign.vcxproj.filters
+++ b/CryptologyCourseDesign/CryptologyCourseDesign.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="FormatExchange.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="spn_plus.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -39,6 +42,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="FormatExchange.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="spn_plus.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
