--- a/CryptologyCourseDesign/CryptologyCourseDesign.vcxproj
+++ b/CryptologyCourseDesign/CryptologyCourseDesign.vcxproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <ClInclude Include="FormatExchange.h" />
     <ClInclude Include="pgp.h" />
+    <ClInclude Include="rainbow.h" />
     <ClInclude Include="rsa.h" />
     <ClInclude Include="spn.h" />
     <ClInclude Include="spn_plus.h" />
@@ -159,6 +160,7 @@
     <ClCompile Include="CryptologyCourseDesign.cpp" />
     <ClCompile Include="FormatExchange.cpp" />
     <ClCompile Include="pgp.cpp" />
+    <ClCompile Include="rainbow.cpp" />
     <ClCompile Include="rsa.cpp" />
     <ClCompile Include="spn.cpp" />
     <ClCompile Include="spn_plus.cpp" />
